# d0-reader

./: .gitmodules  README.md
firmware/: .gitignore  CMakeLists.txt  Cargo.toml  SEGGER_THUMB_Startup.s  STM32H723ZGTx_MemoryMap.xml  STM32H723_Registers.xml  STM32H7xx_Flash_Variant6.icf  build.rs  d0-reader.emProject  memory.ld  memory.x  openocd.cfg  openocd.gdb  run.sh  stm32h723zg.ld  toolchain.cmake
firmware/.cargo/: config.toml
firmware/STM32H7xx/Device/Include/: stm32h7xx.h
firmware/STM32H7xx/Scripts/: STM32H7xx_Target.js
firmware/STM32H7xx/Source/: STM32H7xx_Startup.s  stm32h723xx_Vectors.s
firmware/source/: digitalout.cpp  digitalout.h  ethernetif.c  ethernetif.h  gpio.cpp  gpio.h  main.c  main.cpp  startup.cpp  tcp_echoserver.h  tcpsocket.cpp  tcpsocket.h  uart.cpp  uart.h
firmware/source/config/: FreeRTOSConfig.h  lwipopts.h  stm32f1xx_hal_conf.h
firmware/source/config/arch/: cc.h
firmware/src/: main.rs
hostware/: example.txt  read.py
mechanics/: box.gcode  box.scad  box.stl  cover.gcode  cover.scad  cover.stl  d0-reader-pcb.stl  fine.gcode  head.gcode  head.scad  head.stl
pcb/: README.md
pcb/boards/: boards.lp
pcb/boards/default/: board.lp
pcb/boards/orthogonal/: board.lp
pcb/circuit/: circuit.lp  erc.lp
pcb/output/v1/: .librepcb-output  d0-reader_v1.lppz
pcb/output/v1/assembly/: d0-reader_v1_BOM_Std.csv
pcb/output/v1/gerber/: d0-reader_v1_COPPER-BOTTOM.gbr  d0-reader_v1_COPPER-IN1.gbr  d0-reader_v1_COPPER-IN2.gbr  d0-reader_v1_COPPER-TOP.gbr  d0-reader_v1_DRILLS-NPTH.drl  d0-reader_v1_DRILLS-PTH.drl  d0-reader_v1_OUTLINES.gbr  d0-reader_v1_SILKSCREEN-BOTTOM.gbr  d0-reader_v1_SILKSCREEN-TOP.gbr  d0-reader_v1_SOLDERMASK-BOTTOM.gbr  d0-reader_v1_SOLDERMASK-TOP.gbr  d0-reader_v1_SOLDERPASTE-BOTTOM.gbr  d0-reader_v1_SOLDERPASTE-TOP.gbr
pcb/output/v2/: .librepcb-output  d0-reader_v2.lppz
pcb/output/v2/assembly/: d0-reader_v2_BOM_Std.csv
pcb/output/v2/gerber/: d0-reader_v2_COPPER-BOTTOM.gbr  d0-reader_v2_COPPER-TOP.gbr  d0-reader_v2_DRILLS-NPTH.drl  d0-reader_v2_DRILLS-PTH.drl  d0-reader_v2_OUTLINES.gbr  d0-reader_v2_SILKSCREEN-BOTTOM.gbr  d0-reader_v2_SILKSCREEN-TOP.gbr  d0-reader_v2_SOLDERMASK-BOTTOM.gbr  d0-reader_v2_SOLDERMASK-TOP.gbr  d0-reader_v2_SOLDERPASTE-BOTTOM.gbr  d0-reader_v2_SOLDERPASTE-TOP.gbr
pcb/project/: jobs.lp  metadata.lp  settings.lp
pcb/schematics/: schematics.lp
pcb/schematics/ethernet/: schematic.lp
pcb/schematics/main/: schematic.lp
