[package]
edition = "2021"
name = "stm32-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
systick-monotonic = "1.0.1"
#panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

cortex-m-rtic = "1.1.4"

#embedded-hal = "0.2.7"
#rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.stm32h7xx-hal]
features = ["stm32h747cm7", "ethernet", "rt"]
version = "0.14.0"

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = ["medium-ethernet", "socket-raw", "proto-ipv4"]

[[bin]]
name = "stm32-rust"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
